  (Stephen Dolan, review by David Allsopp, Gabriel Scherer and Olivier Nicole)

- #12044: Add local module open syntax for types.
  ```
    module A = struct
      type t = int
      type r = unit
      type s = string
    end

    type example = A.(t * r * s)
  ```
  (Alistair O'Brien, review by Gabriel Scherer, Nicolás Ojeda Bär
   and Florian Angeletti)

### Type system:

- #12313, #11799: Do not re-build as-pattern type when a ground type annotation
  is given. This allows to work around problems with GADTs in as-patterns.
  (Jacques Garrigue, report by Leo White, review by Gabriel Scherer)

### Runtime system:

- #10111: Increase the detail of location information for debugging events to
  allow the end line number and character offset to be reported.
  (David Allsopp, review by Nick Barnes, Enguerrand Decorne and Stephen Dolan)

- #10403, #12202: introduce `caml_ext_table_add_noexc` that does not
  raise `Out_of_memory` exceptions and use it inside the blocking sections
  of `caml_read_directory`.  Also, check for overflows in ext table sizes.
  (Xavier Leroy, report by Arseniy Alekseyev, review by Gabriel Scherer)

- #12223: Constify constructors and flags tables in C code. Now these
  tables will go in the readonly segment, where they belong.
  (Antonin Décimo, review by Gabriel Scherer and Xavier Leroy)

- #12234: make instrumented time calculation more thread-safe on macOS.
  (Anil Madhavapeddy, review by Daniel Bünzli and Xavier Leroy)

- #12235: introduce and use the `CAMLnoret` macro as a lighter alternative
  to `CAMLnoreturn_start` / `CAMLnoreturn_end`
  (Xavier Leroy, with help from Antonin Décimo, review by
   Gabriel Scherer and David Allsopp)

- #12275: caml/stack.h: more abstract macros to describe OCaml stacks and
  how to traverse them, supporting more stack layouts.
  (Xavier Leroy, review by KC Sivaramakrishnan and Fabrice Buoro)

- #12268: deliver `Out_of_memory` exception if domain creation fails